--- a/style.css
+++ b/style.css
@@ -693,6 +693,12 @@ footer .footer-itens .links img{
     height: auto;
 }
 
+@media (max-width: 1300px){
+    #itens-sessao-3 .background{
+        height: 100%;
+        width: auto;
+    }
+}
 @media (max-width: 1120px) {
     #first-bg{
         height: 95%;
@@ -1070,8 +1076,7 @@ footer .footer-itens .links img{
     #itens-sessao-1 .titulo{
         padding: 0px;
     }
-    #itens-sessao-2{
-    }
+   
     #itens-sessao-2 .titulo h2{
         font-size: 30px;
     }
